--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.port=8111
+# ------- H2 settings ----------
+database=h2
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
 
+# Enable the H2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
