--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@ server.port=8111
 # ------- H2 settings ----------
 database=h2
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.check_nullability=true
 
 # Enable the H2 console
 spring.h2.console.enabled=true
