--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,9 @@
 server.port=8111
 # ------- H2 settings ----------
-database=h2
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
 
-# Enable the H2 console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:assignment;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-
+amazon.dynamodb.endpoint=http://localhost:8000/
+amazon.aws.accesskey=key
+amazon.aws.secretkey=key2
 
 # Security
 # security.basic.enabled=false # Didn't work as expected
