Added AWS DynamoDB support (moving from localhost til cloud)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 server.port=8111
-amazon.dynamodb.endpoint=http://localhost:8000/
-amazon.aws.accesskey=key
-amazon.aws.secretkey=key2
 
+# --------------------DATABASE-------------------
+# AWS DynamoDB
+amazon.dynamodb.endpoint=http://dynamodb.eu-west-1.amazonaws.com
+
+# Localhost DynamoDB (Docker)
+#amazon.dynamodb.endpoint=http://localhost:8000
+
+
+
+# --------------------TOKEN----------------------
 # Security
 # security.basic.enabled=false # Didn't work as expected
