--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-server.port=8111
+server.port=8112
 
 # --------------------DATABASE-------------------
-# AWS DynamoDB
-amazon.dynamodb.endpoint=http://dynamodb.eu-west-1.amazonaws.com
+# (Will be overwritten by environment variables stored in IntelliJ)
+aws.access.key.id=keyToHeaven 
+amazon.dynamodb.endpoint=http://localhost:8000
+# AWS DynamoDB in cloud
 
-
-# Localhost DynamoDB (Docker)
-#amazon.dynamodb.endpoint=http://localhost:8000
 
 
 
